--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.13",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
